[gd_scene load_steps=2 format=2]

[ext_resource path="res://source/game/gui/ShipStatus.gd" type="Script" id=1]

[node name="ShipStatusGUI" type="Control"]
grow_horizontal = 0
grow_vertical = 0

[node name="Container" type="Container" parent="."]
margin_left = -100.0
margin_right = 100.0
margin_bottom = 300.0
rect_clip_content = true
script = ExtResource( 1 )

[node name="Label" type="Label" parent="Container"]
anchor_right = 1.0
margin_top = 10.0
text = "ShipName"
align = 1

[node name="Shields" type="Line2D" parent="Container"]
position = Vector2( 100, 40 )
points = PoolVector2Array( -80, -10, 80, -10, 80, 10, -80, 10, -80, -10 )
width = 2.0
default_color = Color( 0.917647, 0.286275, 0.286275, 0.576471 )
texture_mode = 0

[node name="ShieldsBar" type="Polygon2D" parent="Container/Shields"]
position = Vector2( -78, 0 )
polygon = PoolVector2Array( 0, 8, 156, 8, 156, -8, 0, -8 )
color = Color( 0.917647, 0.407843, 0.407843, 0.67451 )

[node name="Armour" type="Line2D" parent="Container"]
position = Vector2( 100, 70 )
points = PoolVector2Array( -80, -10, 80, -10, 80, 10, -80, 10, -80, -10 )
width = 2.0
default_color = Color( 0.286275, 0.635294, 0.917647, 0.576471 )
texture_mode = 0

[node name="ArmourBar" type="Polygon2D" parent="Container/Armour"]
position = Vector2( -78, 0 )
polygon = PoolVector2Array( 0, 8, 156, 8, 156, -8, 0, -8 )
color = Color( 0.407843, 0.784314, 0.917647, 0.67451 )

[node name="Energy" type="Line2D" parent="Container"]
position = Vector2( 100, 100 )
points = PoolVector2Array( -80, -10, 80, -10, 80, 10, -80, 10, -80, -10 )
width = 2.0
default_color = Color( 0.286275, 0.917647, 0.47451, 0.576471 )
texture_mode = 0

[node name="EnergyBar" type="Polygon2D" parent="Container/Energy"]
position = Vector2( -78, 0 )
polygon = PoolVector2Array( 0, 8, 156, 8, 156, -8, 0, -8 )
color = Color( 0.407843, 0.917647, 0.572549, 0.67451 )

